[gd_scene load_steps=24 format=3 uid="uid://d0idcdb1gpcb6"]

[ext_resource type="Script" path="res://enemy.gd" id="1_vgjcb"]
[ext_resource type="Texture2D" uid="uid://cppoox1mluwq2" path="res://art/sprites/characters/slime.png" id="2_htacp"]
[ext_resource type="Texture2D" uid="uid://crjo3o2fcbc73" path="res://demon_idle.png" id="3_g77tc"]
[ext_resource type="AudioStream" uid="uid://wo7afc0sfl1t" path="res://hit.mp3" id="3_uacci"]
[ext_resource type="Texture2D" uid="uid://cj5543ocdny30" path="res://demon_front_run copy (1).png" id="4_gpv5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyss"]
atlas = ExtResource("2_htacp")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjin"]
atlas = ExtResource("2_htacp")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m72g3"]
atlas = ExtResource("2_htacp")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgsb7"]
atlas = ExtResource("2_htacp")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_co0xg"]
atlas = ExtResource("2_htacp")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fivea"]
atlas = ExtResource("3_g77tc")
region = Rect2(0, 0, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g2og"]
atlas = ExtResource("3_g77tc")
region = Rect2(768, 0, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtcos"]
atlas = ExtResource("3_g77tc")
region = Rect2(0, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_j36bc"]
atlas = ExtResource("3_g77tc")
region = Rect2(768, 768, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jleh"]
atlas = ExtResource("3_g77tc")
region = Rect2(0, 1536, 768, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud1og"]
atlas = ExtResource("4_gpv5x")
region = Rect2(0, 0, 750, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpcos"]
atlas = ExtResource("4_gpv5x")
region = Rect2(750, 0, 750, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_hispy"]
atlas = ExtResource("4_gpv5x")
region = Rect2(0, 800, 750, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_seabc"]
atlas = ExtResource("4_gpv5x")
region = Rect2(750, 800, 750, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_8h1ao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m72g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgsb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co0xg")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fivea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g2og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtcos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j36bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jleh")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud1og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpcos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hispy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seabc")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dv14i"]
radius = 306.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4s7sx"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c7pcp"]
radius = 26.0768

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_vgjcb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_8h1ao")
animation = &"idle"
offset = Vector2(2.08165e-12, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_dv14i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4s7sx")

[node name="enemy_hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox" groups=["enemy"]]
shape = SubResource("CircleShape2D_c7pcp")

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.858824, 0.054902, 0.0862745, 1)
offset_left = -6.0
offset_top = -16.0
offset_right = 114.0
offset_bottom = 11.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uacci")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
